# sawn1c

./: __init__.py  build.toml.test  pyproject.toml  requirements.txt  sawn1c.py
src/: __init__.py  cli.py  platform.py  platform_check.py  security.py
src/compilengine/: __init__.py  build.py
