[project]
name = "sawn1c"
version = "0.1.0"
description = "The missing package manager that can build"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic" # or "strict"